--- a/foodtaskerapp/templates/restaurant/sign_up.html
+++ b/foodtaskerapp/templates/restaurant/sign_up.html
@@ -13,7 +13,12 @@
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </head>
 <body>
-  Registro de Restaurante
-  
+  <form method="POST">
+    {% csrf_token %}
+    {{ user_form }}
+    {{ restaurant_form }}
+    <button type="submit">Registrarse</button>
+  </form>
+
 </body>
 </html>
