--- a/foodtaskerapp/templates/restaurant/sign_up.html
+++ b/foodtaskerapp/templates/restaurant/sign_up.html
@@ -13,7 +13,7 @@
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </head>
 <body>
-  <form method="POST">
+  <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ user_form }}
     {{ restaurant_form }}
